fix(jdk17): replace List.getFirst()/getLast() with get(0)/get(size()-1)
Java 21 SequencedCollection default methods on java.util.List are not
available on JDK 17. Fixed real List call sites introduced across this
chunk's picks (#5478/#5602/#5636/#5639/#5608/#5596/#5662/#4895 test and
main code). Pair, BetweenCondition, Deque and Undertow HeaderValues
call sites are left untouched - those types define their own
getFirst()/getLast() independent of JDK version.